# joias-platform

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/core/: settings.py  urls.py
backend/store/: admin.py  models.py  serializers.py  urls.py  views.py
backend/store/management/commands/: seed_db.py
backend/store/migrations/: 0001_initial.py  0002_category_show_on_home.py  0003_order_orderitem.py  0004_profile.py  0005_remove_address_district_address_name_and_more.py  0006_alter_customrequest_reference_image_and_more.py  0007_order_guest_email_order_guest_name_and_more.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx
frontend/app/admin/dashboard/: page.tsx
frontend/app/admin/login/: page.tsx
frontend/app/admin/orders/: page.tsx
frontend/app/admin/products/: page.tsx
frontend/app/admin/products/new/: page.tsx
frontend/app/busca/: page.tsx
frontend/app/categoria/[...slug]/: page.tsx
frontend/app/checkout/: page.tsx
frontend/app/login/: page.tsx
frontend/app/produto/[slug]/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: CartSidebar.tsx  Footer.tsx  Navbar.tsx  ProductFilters.tsx  ProductRow.tsx
frontend/components/admin/: AdminSidebar.tsx
frontend/components/product/: ProductActions.tsx  ProductGallery.tsx  ProductInfo.tsx  ProductReviews.tsx  RelatedProducts.tsx
frontend/context/: AuthContext.tsx  CartContext.tsx
frontend/services/: api.ts
(+2 files in other folders)
